bspg/src/processing/snapshots/bevy_state_plugin_generator__processing__tests__apply_naming_scheme_differences.snap
---
source: src/processing/tests.rs
expression: outputs
---
[
    [
        "RootState -> RootState",
        "Menu -> RootStateMenu",
        "Options -> MenuOptions",
        "Audio -> OptionsAudio",
        "Video -> OptionsVideo",
    ],
    [
        "RootState -> RootState",
        "Menu -> RootStateMenu",
        "Options -> RootStateMenuOptions",
        "Audio -> RootStateMenuOptionsAudio",
        "Video -> RootStateMenuOptionsVideo",
    ],
    [
        "RootState -> RootState",
        "Menu -> Menu",
        "Options -> Options",
        "Audio -> Audio",
        "Video -> Video",
    ],
]
