bspg/src/processing/snapshots/bevy_state_plugin_generator__processing__tests__flatten_node_enums@enum_root_a_b.snap
---
source: src/processing/tests.rs
expression: flatten_root_node(node)
---
[
    NodeData {
        index: 0,
        parent: None,
        node_type: Enum,
        depth: 0,
        name: "Root",
        resolved_name: None,
        variants: [
            "A",
        ],
        comments: [],
    },
    NodeData {
        index: 1,
        parent: Some(
            0,
        ),
        node_type: Enum,
        depth: 1,
        name: "A",
        resolved_name: None,
        variants: [
            "B",
        ],
        comments: [],
    },
    NodeData {
        index: 2,
        parent: Some(
            1,
        ),
        node_type: Singleton,
        depth: 2,
        name: "B",
        resolved_name: None,
        variants: [],
        comments: [],
    },
]
